# Computer_Graphics_WUT

./: CMakeLists.txt  README.md  Shader.h  Shader.hpp  face.hpp  main.cpp  model.hpp  painterAlgorithm.hpp
docs/: Shaders.md
